# aoprism

./: .agent  .env.example  .gitignore  CHANGELOG.md  LICENSE  MANUAL_TESTING_GUIDE.md  OPEN_ISSUES.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
crates/aoprism-crypto/: Cargo.toml
crates/aoprism-crypto/src/: lib.rs
data/marketplace/: processes.json
docs/: CHANGELOG.md  DEVELOPMENT_REPORT.md  MCP-SETUP.md  OPEN_ISSUES.md  PROJECT_ROADMAP.md  RFC_RUST_INTEGRATION.md  ROADMAP.md
docs/snippets/: best_practices.lua  kernel_api.lua
examples/: aiCopilot.example.js
mcp-platform/: README.md  package-lock.json  package.json  vitest.config.js
mcp-platform/lua/: README.md  prism-social.lua
mcp-platform/src/: README.md  ao-client.js  executor.js  server.js
mcp-platform/test-suite/: bridge-security.spec.js  client-security.spec.js  console-logic.spec.js  crypto-core.spec.js  live-smoke.js  lua-agent.spec.js  prism-kernel.spec.js  prism-verification.js  tools.spec.js
mcp-server/: .env.example  DAILY_REPORT_W1.md  Dockerfile  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json  vitest.config.js
mcp-server/src/: http-server.js  index.js  security.js
mcp-server/tests/: server.test.js
research/: mcp-server-research.md
scripts/: deploy.mjs  generate-wallet.mjs  qa-runner.js
src/: App.js  main.js  state.js  state.test.js  style.css  walletApp.js
src/ai/: README.md  debugAssistant.js  index.js  (+3 more)
tests/: QA_COORDINATION_MATRIX.md  README.md
(+149 files in other folders)
