[package]
name = "aoprism-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
signature = "2.2"
spki = "0.7"
rand = "0.8"
once_cell = "1.18"
serde_json = "1.0"
wgpu = "22.1"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
futures = "0.3"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
